touching up project

--- a/itis3135/project/index.html
+++ b/itis3135/project/index.html
@@ -24,9 +24,9 @@
             <h2>Home</h2>
             <figure>
                 <a>
-                    <img src="images/home-rotaract.jpg" height="500" width="985" alt="People in action. Service above self">
+                    <img src="images/home-rotaract.jpg" alt="People in action. Service above self" class="fit">
                 </a>
-                <figcaption class="align-right">People in action. Service above self.</figcaption>
+                <figcaption>People in action. Service above self.</figcaption>
             </figure>
             <h3 class="align-left">Who is District 7680?</h3>
             <p>District 7680 is on the East Coast and includes counties in the West-central regions of North Carolina.</p>
