--- a/itis3135/calculator-try.html
+++ b/itis3135/calculator-try.html
@@ -48,6 +48,8 @@
             <br>
             <a href="exercises/Taylor-Activity12.html">bxSlider Plugin</a>
             ||
+            <a href="exercises/Activity13/Taylor-Activity13.html">XML to JSON Activity</a>
+            ||
             <a href="contract.html">Contract</a>
         </nav>
         <main>
