--- a/itis3135/exercises/Activity13/Taylor-Activity13.html
+++ b/itis3135/exercises/Activity13/Taylor-Activity13.html
@@ -21,6 +21,8 @@
         <br/>
         <a href="https://validator.w3.org/check?uri=referer">Validate HTML</a>
         <a href="https://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
+        <br>
+        <a href="https://webpages.uncc.edu/rtaylo96/itis3135/index.html">Return to ITIS 3135 Home Page</a>
     </footer>
 </body>
 </html>
