--- a/itis3135/Practice.html
+++ b/itis3135/Practice.html
@@ -46,6 +46,8 @@
 		||
 		<a href="exercises/Activity13/Taylor-Activity13.html">XML to JSON Activity</a>
         ||
+		<a href="exercises/Activity14/Taylor-Activity14.html">Load Speaker Files</a>
+        ||
 		<a href="contract.html">Contract</a>
 	</nav>
 	<body>
