--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -48,6 +48,8 @@
             ||
             <a href="exercises/Activity13/Taylor-Activity13.html">XML to JSON Activity</a>
             ||
+            <a href="exercises/Activity14/Taylor-Activity14.html">Load Speaker Files</a>
+            ||
             <a href="contract.html">Contract</a>
         </nav>
         <main>
@@ -90,6 +92,10 @@
                     <p>An application that is uses jQuery effects and animation.</p>
                 <h4>Accordion Widget</h4>
                     <p>An application that works with jQuery plugins and UIs, specifically the Accordion Widget.</p>
+                <h4>XML to JSON Activity</h4>
+                    <p>This activity is showing the difference using AJAX between XML and JSON files.</p>
+                <h4>Load Speaker Files</h4>
+                    <p>This activity is writing in JavaScript for loading data from JSON files.</p>
                 <h4>Contract</h4>
                     <p>This page is a contract between the student and professor of the course.</p>
                 <br>
