--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -50,6 +50,9 @@
             ||
             <a href="exercises/Activity14/Taylor-Activity14.html">Load Speaker Files</a>
             ||
+            <a href="exercises/Activity15/Taylor-Activity15.html">Use Expanded JSON File</a>
+            ||
+            <a></a>
             <a href="contract.html">Contract</a>
         </nav>
         <main>
