--- a/itis3135/exercises/Activity16/Taylor-Activity16.html
+++ b/itis3135/exercises/Activity16/Taylor-Activity16.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Flickr</title>
-    <link href="Activity16.css" rel="stylesheet">
+    <link href="Taylor-Activity16.css" rel="stylesheet">
     <link href="css/lightbox.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="js/lightbox.min.js"></script>
-    <script src="Activity16.js"></script>
+    <script src="Taylor-Activity16.js"></script>
 
 </head>
 
