Updating Activity 16 and Index

--- a/itis3135/exercises/Activity16/Taylor-Activity16.html
+++ b/itis3135/exercises/Activity16/Taylor-Activity16.html
@@ -17,7 +17,7 @@
     <nav>
         <ul>
 
-            <li><a href="Activity16.html">About Us</a></li>
+            <li><a href="Taylor-Activity16.html">About Us</a></li>
 
         </ul>
     </nav>
