--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -52,7 +52,8 @@
             ||
             <a href="exercises/Activity15/Taylor-Activity15.html">Use Expanded JSON File</a>
             ||
-            <a></a>
+            <a href="exercises/Activity16/Taylor-Activity16.html">Flickr</a>
+            <br>
             <a href="contract.html">Contract</a>
         </nav>
         <main>
