Updating Nav Bar

--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -51,6 +51,10 @@
             ||
             <a href="exercises/Activity14/Taylor-Activity14.html">Load Speaker Files</a>
             ||
+            <a href="exercises/Activity15/Taylor-Activity15.html">Use Expanded JSON File</a>
+            ||
+            <a href="exercises/Activity16/Taylor-Activity16.html">Flickr</a>
+            <br>
             <a href="contract.html">Contract</a>
         </nav>
         <main>
