--- a/itis3135/project/contact.html
+++ b/itis3135/project/contact.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <script src="scripts/defualt.js"></script>
+        <script src="scripts/jquery-3.1.1.min.js"></script>
+        <script src="scripts/form-validation.js"></script>
         <title>Rotaract Club | District 7680 | Contact Us</title>
     </head>
     <body>
@@ -27,13 +27,21 @@
             <h3>Want to get involved?</h3>
             <p>Fill out your information below and we will add you to the registry.</p>
             <form id="interest-form">
-                <label for="name"><span>Name:</span></label>
-                <input type="text" id="name" name="name" placeholder="Enter Name"><br>
-                <label for="school"><span>School:</span></label>
-                <input type="text" id="school" name="school" placeholder="Enter School"><br>
-                <label for="email"><span>Email:</span></label>
-                <input type="email" id="email" name="email" placeholder="Enter Email"><br><br>
-                <input type="submit" value="Submit">
+                <div>
+                    <label for="name"><span>Name:</span></label><br>
+                    <input type="text" id="name" name="name"><br>
+                </div>
+                <div>
+                    <label for="school"><span>School:</span> (Interest in UNCC or CPCC)</label><br>
+                    <input type="text" id="school" name="school"><br>
+                </div>
+                <div>
+                    <label for="email"><span>Email:</span></label><br>
+                    <input type="email" id="email" name="email"><br>
+                </div>
+                <div>
+                    <input type="submit" value="Submit">
+                </div>
             </form>
             <h3>Get in Contact with the District</h3>
             <ul>
