--- a/itis3135/project/cpcc-rotaract.html
+++ b/itis3135/project/cpcc-rotaract.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <script src="scripts/defualt.js"></script>
+        <script src="scripts/jquery-3.1.1.min.js"></script>
+        <script src="scripts/slideshow.js"></script>
         <title>Rotaract Club | District 7680 | CPCC Rotaract</title>
     </head>
     <body>
