--- a/itis3135/project/cpcc-rotaract.html
+++ b/itis3135/project/cpcc-rotaract.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="scripts/jquery-3.1.1.min.js"></script>
+        <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
         <script src="scripts/slideshow.js"></script>
+        <script src="scripts/accordion.js"></script>
         <title>Rotaract Club | District 7680 | CPCC Rotaract</title>
     </head>
     <body>
@@ -48,47 +51,55 @@
             </p>
             <br>
             <h3>Past Service Projects</h3>
-            <dl>
-                <dt>Catawba Riversweep Foundation</dt>
-                    <dd>
-                        CPCC's Rotaractors helped clear the river at the Riversweep.
-                        They also got Kayak on the river and collected a lot of trash.
-                        To learn more about volunteering with Catawba Riversweep Foundation
-                        <a href="https://catawbariversweep.org/volunteer/?fbclid=IwAR3h_8Cn4uwJs8C96TX74SC-ceCG8enofiChrixzIhQjs135huQbH9cugPo">
-                            click here
-                        </a>
-                    </dd>
-                <dt>Parrot University</dt>
-                    <dd>
-                        At Parrot University our Rotaractors cleaned cages as well as the
-                        classroom and helped fort out the shelves. The university supplies
-                        everything you need to have a healthy, happy and well=balanced parrot companion.
-                        To learn more about volunteering at Parrot University
-                        <a href="https://www.parrotu.com/">
-                            click here
-                        </a> 
-                    </dd>
-                <dt>Matthews Help Centre</dt>
-                    <dd>
-                        Our Rotaractors at Matthews Help Centre, sorted out donation, cleaned and tidied
-                        up the store. The Matthews Help Centre provides help to those in need. They have
-                        financial crisis assistance which helps to meet life's basic needs, they also have
-                        a food pantry that provides one weeks worth of food to a family. 
-                        To learn more about volunteering at Matthews Help Centre
-                        <a href="https://matthewshelpcenter.org/">
-                            click here
-                        </a> 
-                    </dd>
-                <dt>Partnered Coat Drive with UNCC</dt>
-                    <dd>
-                        Our Rotaract Clubs partnered with the Rotaract club at UNCC and donated coats to
-                        children in need. The clubs also provided games and pizza for the kids.
-                        To learn more about volunteering with Operation Warm
-                        <a href="https://www.operationwarm.org/ ">
-                            click here
-                        </a>
-                    </dd>
-            </dl>
+            <div id="accordion">
+                <h3>Catawba Riversweep Foundation</h3>
+                    <div>
+                        <p>
+                            CPCC's Rotaractors helped clear the river at the Riversweep.
+                            They also got Kayak on the river and collected a lot of trash.
+                            To learn more about volunteering with Catawba Riversweep Foundation
+                            <a href="https://catawbariversweep.org/volunteer/?fbclid=IwAR3h_8Cn4uwJs8C96TX74SC-ceCG8enofiChrixzIhQjs135huQbH9cugPo">
+                                click here
+                            </a>
+                        </p>
+                    </div>
+                <h3>Parrot University</h3>
+                    <div>
+                        <p>
+                            At Parrot University our Rotaractors cleaned cages as well as the
+                            classroom and helped fort out the shelves. The university supplies
+                            everything you need to have a healthy, happy and well=balanced parrot companion.
+                            To learn more about volunteering at Parrot University
+                            <a href="https://www.parrotu.com/">
+                                click here
+                            </a> 
+                        </p>
+                    </div>
+                <h3>Matthews Help Centre</h3>
+                    <div>
+                        <p>
+                            Our Rotaractors at Matthews Help Centre, sorted out donation, cleaned and tidied
+                            up the store. The Matthews Help Centre provides help to those in need. They have
+                            financial crisis assistance which helps to meet life's basic needs, they also have
+                            a food pantry that provides one weeks worth of food to a family. 
+                            To learn more about volunteering at Matthews Help Centre
+                            <a href="https://matthewshelpcenter.org/">
+                                click here
+                            </a> 
+                        </p>
+                    </div>
+                <h3>Partnered Coat Drive with UNCC</h3>
+                    <div>
+                        <p>
+                            Our Rotaract Clubs partnered with the Rotaract club at UNCC and donated coats to
+                            children in need. The clubs also provided games and pizza for the kids.
+                            To learn more about volunteering with Operation Warm
+                            <a href="https://www.operationwarm.org/ ">
+                                click here
+                            </a>
+                        </p>
+                    </div>
+            </div>
         </main>
         <footer>
             <figure class="align-right">
