--- a/itis3135/project/uncc-rotaract.html
+++ b/itis3135/project/uncc-rotaract.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="scripts/jquery-3.1.1.min.js"></script>
+        <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
         <script src="scripts/slideshow.js"></script>
+        <script src="scripts/accordion.js"></script>
         <title>Rotaract Club | District 7680 | UNCC Rotaract</title>
     </head>
     <body>
@@ -49,44 +52,52 @@
             </p>
             <br>
             <h3>Past Service Projects</h3>
-            <dl>
-                <dt>Little Sugar Creek Greenway Litter Pickup</dt>
-                    <dd>
-                        The Rotaract Club joined The Top of the Week and Queen City Rotary on a volunteer 
-                        opportunity with picking trash up along the Little Sugar Creek Greenway.
-                        To learn more about volunteering at Little Sugar Creek Greenway
-                        <a href="https://volunteer.parkandrec.mecklenburgcountync.gov/need/detail/?need_id=618568">
-                            click here
-                        </a>
-                    </dd>
-                <dt>Catawba Riversweep Foundation</dt>
-                    <dd>
-                        Rotaract students, with the help of Catawba Riversweep Foundation cleaned the river 
-                        and the students enjoyed kayaking, fellowship and service.
-                        To learn more about volunteering at Catawba Riversweep Foundation
-                        <a href="https://catawbariversweep.org/volunteer/?fbclid=IwAR3h_8Cn4uwJs8C96TX74SC-ceCG8enofiChrixzIhQjs135huQbH9cugPo">
-                            click here
-                        </a>
-                    </dd>
-                <dt>Greater Life Chiropractor Annual Thanksgiving Drive</dt>
-                    <dd>
-                        Rotaractors teamed up with Greater Life Chiropractor for their annual Thanksgiving drive. 
-                        Delivering fully prepared Thanksgiving meals to 250 Charlotte families in need.
-                        To learn more about Greater Life Chiropractor
-                        <a href="https://getgreaterlifechiropractic.com/">
-                            click here
-                        </a>
-                    </dd>
-                <dt>Partnered Coat Drive with UNCC</dt>
-                    <dd>
-                        Our Rotaract Clubs partnered with the Rotaract club at CPCC and donated coats to
-                        children in need. The clubs also provided games and pizza for the kids. 
-                        To learn more about volunteering with Operation Warm
-                        <a href="https://www.operationwarm.org/ ">
-                            click here
-                        </a>
-                    </dd>
-            </dl>
+            <div id="accordion">
+                <h3>Little Sugar Creek Greenway Litter Pickup</h3>
+                    <div>
+                        <p>
+                            The Rotaract Club joined The Top of the Week and Queen City Rotary on a volunteer 
+                            opportunity with picking trash up along the Little Sugar Creek Greenway.
+                            To learn more about volunteering at Little Sugar Creek Greenway
+                            <a href="https://volunteer.parkandrec.mecklenburgcountync.gov/need/detail/?need_id=618568">
+                                click here
+                            </a>
+                        </p>
+                    </div>
+                <h3>Catawba Riversweep Foundation</h3>
+                    <div>
+                        <p>
+                            Rotaract students, with the help of Catawba Riversweep Foundation cleaned the river 
+                            and the students enjoyed kayaking, fellowship and service.
+                            To learn more about volunteering at Catawba Riversweep Foundation
+                            <a href="https://catawbariversweep.org/volunteer/?fbclid=IwAR3h_8Cn4uwJs8C96TX74SC-ceCG8enofiChrixzIhQjs135huQbH9cugPo">
+                                click here
+                            </a>
+                        </p>
+                    </div>
+                <h3>Greater Life Chiropractor Annual Thanksgiving Drive</h3>
+                    <div>
+                        <p>
+                            Rotaractors teamed up with Greater Life Chiropractor for their annual Thanksgiving drive. 
+                            Delivering fully prepared Thanksgiving meals to 250 Charlotte families in need.
+                            To learn more about Greater Life Chiropractor
+                            <a href="https://getgreaterlifechiropractic.com/">
+                                click here
+                            </a>
+                        </p>
+                    </div>
+                <h3>Partnered Coat Drive with UNCC</h3>
+                    <div>
+                        <p>
+                            Our Rotaract Clubs partnered with the Rotaract club at CPCC and donated coats to
+                            children in need. The clubs also provided games and pizza for the kids. 
+                            To learn more about volunteering with Operation Warm
+                            <a href="https://www.operationwarm.org/ ">
+                                click here
+                            </a>
+                        </p>
+                    </div>
+            </div>
         </main>
         <footer>
             <figure class="align-right">
