--- a/itis3135/project/cpcc-rotaract.html
+++ b/itis3135/project/cpcc-rotaract.html
@@ -51,7 +51,7 @@
             </p>
             <br>
             <h3>Past Service Projects</h3>
-            <div id="accordion">
+            <div id="service-projects">
                 <h3>Catawba Riversweep Foundation</h3>
                     <div>
                         <p>
