--- a/itis3135/project/uncc-rotaract.html
+++ b/itis3135/project/uncc-rotaract.html
@@ -52,7 +52,7 @@
             </p>
             <br>
             <h3>Past Service Projects</h3>
-            <div id="accordion">
+            <div id="service-projects">
                 <h3>Little Sugar Creek Greenway Litter Pickup</h3>
                     <div>
                         <p>
