Project Update (A4) Ajax 2

--- a/itis3135/project/about.html
+++ b/itis3135/project/about.html
@@ -22,28 +22,31 @@
         </nav>
         <main>
             <h2>About Rotaract</h2>
-            <h3>Rotaract</h3>
+            <!--
+                <h3>Rotaract</h3>
                 <p>
                     Rotaract clubs bring together people ages 18 and older to exchange ideas with leaders in the community, develop leadership and professional skills, and have fun through service. 
                     In communities worldwide, Rotary and Rotaract members work side by side to take action through service. 
                     From big cities to rural villages, Rotaract is changing communities like yours.
                 </p>
-            <br>
-            <h3>Rotaract History</h3>
+                <br>
+                <h3>Rotaract History</h3>
                 <p>
                     In the late 1960s, noting the success of the recently formed Interact program, the RI Board realized the need for a program of service, activity, and fellowship for young adults 
                     no longer of Interact age (12-18). The name Rotaract (Rotary in Action) was selected to show the program’s close affiliation with both Rotary and Interact clubs. 
                     RI President Luther Hodges inaugurated Rotaract in 1968, with the Rotaract Club of University of North Carolina-Charlotte, USA, being the first club. 
                     The club received its charter on 13 March and had 21 members.
                 </p>
-            <br>
-            <h3>Rotary International at a College Level</h3>
-            <p>
+                <br>
+                <h3>Rotary International at a College Level</h3>
+                <p>
                 Rotaract originally began as a Rotary International youth program in 1968 and has grown into a major Rotary-sponsored organization of over 9,030 clubs spread around the world and 
                 207,690 members. It is a service, leadership, and community service organization for young men and women between the ages of 18–30. Rotaract focuses on the development of young 
                 adults as leaders in their communities and workplaces. Clubs around the world also take part in international service projects in a global effort to bring peace and international 
                 understanding to the world.
-            </p>
+                </p>
+            -->
+            <div id="information"></div>
             <br>
             <br>
             <p>The information above has been adapted from <a href="https://rotary7680.org/">Rotary District 7680</a> and <a href="https://www.rotary.org/en/get-involved/rotaract-clubs">Rotary Rotaract Club</a> webpages</p>
