--- a/itis3135/project/about.html
+++ b/itis3135/project/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
+        <script src="scripts/ajax-about.js"></script>
         <title>Rotaract Club | District 7680 | About Rotaract</title>
     </head>
     <body>
